docs/semantic-ontology/linkml/tests/valid/amendment-amendment-nochange-2.jsonld
{
    "@context": {
        "@vocab": "https://w3id.org/facis/dcs/ontology/v1#",
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#",
        "xsd": "http://www.w3.org/2001/XMLSchema#",
        "children": {
            "@type": "@id",
            "@container": "@list"
        }
    },
    "@id": "urn:doc:amendment-nochange",
    "@type": "ContractTemplate",
    "documentTitle": "No-Change Test",
    "metadata": {
        "@type": "TemplateMetadata",
        "title": "No-Change Test"
    },
    "documentStructure": {
        "@type": "DocumentStructure",
        "layout": [
            {
                "@type": "LayoutNode",
                "isRoot": true,
                "children": [
                    "urn:doc:amendment-nochange#s1"
                ]
            },
            {
                "@type": "LayoutNode",
                "@id": "urn:doc:amendment-nochange#s1",
                "children": [
                    "urn:doc:amendment-nochange#c1"
                ]
            }
        ],
        "blocks": [
            {
                "@type": "Section",
                "@id": "urn:doc:amendment-nochange#s1",
                "title": "1. Terms"
            },
            {
                "@type": "Clause",
                "@id": "urn:doc:amendment-nochange#c1",
                "content": [
                    "This clause will not change."
                ]
            }
        ]
    }
}
